--- a/Python_Cipher.ipynb
+++ b/Python_Cipher.ipynb
@@ -711,7 +711,7 @@
    ],
    "source": [
     "x = Cipher(150)\n",
-    "Key1,Key2,Key3,Encrypted_Message = x.Encode('if light has no mass, why is it affected by the gravitatioanal force of a black hole')\n",
+    "Key1,Key2,Key3,Encrypted_Message = x.Encode('if light has no mass, why is it affected by the gravitational force of a black hole')\n",
     "print('Encrypted Message:\\n',Encrypted_Message,'\\n')\n",
     "print(time.time())\n",
     "print(Key1)\n",
